$Id$

Denora v1.4.3-SVN
-----------------

Additions
09/02/25 r257 Improved nick tracking on nick change for +r users
09/02/22 r250 Added InspIRCd 1.2 support [closes #527]

Changes
09/02/22 r249 CTCP VERSION is now handled by alias if present
09/02/16 r239 Updated GeoIP.dat

Fixes
09/02/26 r256 Fixed missing NICK handling in inspircd12
09/02/26 r256 Nick tracking no longer removes old nick alias on nick change
09/02/25 r255 Fixed segfault on missing chan +f parameter in ircd message
09/02/23 r253 [2] Patch fixing some memleaks
09/02/22 r250 Added missing AWAY message handling in inspircd11
09/02/22 r247 Fixed sending broken CAPAB message to Plexus3
09/02/22 r247 Workaround for missing EOB in Charybdis and NGircd
09/02/19 r244 Fixed Plexus3 TOPIC, KILL, NICK, EOB handling and chanmode +z
09/02/17 r242 Fixed handling of Plexus3 UID message in TS6 mode
09/02/17 r242 Added missing TMODE implementation in Plexus3
09/02/17 r241 Fixed JOIN message handling in Plexus3
09/02/17 r241 Fixed user and channel modes in Plexus3 protocol
09/01/13 r236 admin from denora.conf now overrides admin.db [closes #517]
09/01/12 r235 mysql backup module now checks for sql connection [closes #524]
09/01/12 r235 Fixed chanstats problem on some x64 systems
08/12/18 r235 P10 UIDs are case sensitive [closes #525]
08/09/15 r233 [1] Fixed nss problems on FreeBSD systems [closes #515]

Removals
n/a

Developers
Denora Team <dev@denorastats.org>

Contributors
[1] Rob <rob@anope.org>
[2] DukePyrolator


Denora v1.4.2a
--------------

Additions
n/a

Changes
08/09/03 r227 Updated GeoIP.dat
08/08/22 r214 Fixed exclude command assuming ustats user instead of nick
08/08/22 r204 Channel logging is now enabled even in debug mode

Fixes
08/09/08 r230 Fixed parsing issue in inspircd11 fjoin [closes #514]
08/09/08 r230 Fixed issue on empty VERSION inspircd11 message [closes #514]
08/09/06 r228 Now compiles on 64 bit Windows
08/09/03 r227 Fixed GeoIP related crash with newer dat files [closes #512]